fix blurriness

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-#map {
-	display: none;
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+canvas {
+	image-rendering: pixelated;
+	image-rendering: -moz-crisp-edges;
+	image-rendering: crisp-edges;
 }
